--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "npm": "^6.4.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-extended-stylesheet": "^0.8.1",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^2.7.0"
   }
 }
